--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -167,6 +167,9 @@ on fs
     mkdir /persist/data 0700 system system
     restorecon_recursive /persist
 
+    chown system system  /dev/goodix_fp
+    chmod 0644 /dev/goodix_fp
+
 on post-fs
     symlink /sdcard /storage/sdcard0
 
@@ -553,3 +556,12 @@ service fingerprintd /system/bin/fingerprintd
     socket fpce stream 0666 system system
     user system
     writepid /dev/cpuset/system-background/tasks
+
+service gx_fpd /system/bin/gx_fpd
+    class late_start
+    user system
+    group system
+    disabled
+
+on property:persist.sys.fp.sensor=goodix
+    start gx_fpd
